prover-ray/zkcdriver/testdata/synced/invalid/basic_02.zkc
//error:2:22-23:variable already declared
fn f(x:u8) -> (r:u8, r:u8) {
  r = 0
  return
}
